# chicken-behavior-analysis

./: .gitignore  main_new.ipynb  pyproject.toml  simple.py
