[project]
name = "mainrunningloop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.8.0",
    "ultralytics>=8.3.241",
    "uvicorn>=0.40.0",
]
